matching commit for keyd config change for alt. mouse mode entry

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -54,7 +54,7 @@ window#waybar {
 
 #clock {
   font-family: Terminus;
-  font-weight: bold;
+  font-weight: normal;
 }
 tooltip{
   font-family: Roboto;
